--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "autoprefixer": "^10.4.16",
+    "ng2-file-upload": "^5.0.0",
+    "ngx-toastr": "^18.0.0",
     "postcss": "^8.4.33",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.2",
